--- a/primary.css
+++ b/primary.css
@@ -1,5 +1,5 @@
 .mainbody{  margin-left: auto;margin-right: auto; width:960px}
-.index_1{ width:60%; background-color:Red;  height:400px; float:left;}      
-.index_2{ width:20%; background-color:Blue; float:left; height:400px; }     
-.index_3{ width:20%; background-color:Green; float:left; height:400px; }    
+.index_main{ width:60%; background-color:Red;  height:400px; float:left;}      
+.index_col1{ width:20%; background-color:Blue; float:left; height:400px; }     
+.index_col2{ width:20%; background-color:Green; float:left; height:400px; }    
 .index_header{ background-color:#994400; width:100%; height:100px;}      
