--- a/primary.css
+++ b/primary.css
@@ -295,7 +295,7 @@ background-color:#33201E;
 padding:5px 10px 8px 3px;
 border-style:solid;
 border-width:0px 3px 6px 0px;
-border-color:#0B090F;
+border-color:#0A100A;
 }
 
 /*
