--- a/primary.css
+++ b/primary.css
@@ -19,7 +19,9 @@ border-style:solid;
 border-width:2px 2px 25px 7px;
 border-color:#221111;  
 /*    TOP RIGHT BOTTOM LEFT padding */
+box-shadow:1px 2px 0 3px #120808;
 }      
+
 /* style for menu */
 /*.menu{
 width:370px;
@@ -41,6 +43,7 @@ border-width:1px 2px 10px 7px;
 padding:3px 5px 41px 20px;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
+box-shadow:1px 1px 0 2px #080808;
 }      
 .col1{ 
 width:120px; 
@@ -55,6 +58,7 @@ overflow-y: auto;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
 border-width:2px 2px 25px 7px;
+box-shadow:1px 2px 0 3px #081208;
 }     
 .col2{ 
 width:110px; 
@@ -69,6 +73,7 @@ overflow-y: auto;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
 border-width:2px 2px 25px 7px;
+box-shadow:1px 2px 0 3px #080812;
 }    
 
 .header ul
@@ -141,7 +146,7 @@ border-style:solid;
 /*background-color:#2F2B2A;*/
 background-color:#33201E;
 border-width:1px 5px 8px 2px;
-padding:5px 30px 0px 13px;
+padding:5px 30px 0px 15px;
 margin:10px 0px 30px 00px;
 }
 
@@ -287,7 +292,7 @@ padding:7px 5px 0px 5px;
 table{
 font-size:100%;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:0px 10px -5px -5px;
+margin:0px 10px -5px -7px;
 display: block;
 position: relative;
 color:#EEEEEE;
@@ -334,6 +339,15 @@ font-weight:bold;
 .mainentryfull{
 width:351px;
 font-weight:bold;
+}
+.number{
+vertical-align:text-top;
+/*    TOP RIGHT BOTTOM LEFT padding */
+padding:1px 7px 0 0;
+font-weight:bold;
+}
+.wideentry{
+width:401px;
 }
 .mainentrydate{
 width:121px;
