--- a/primary.css
+++ b/primary.css
@@ -153,6 +153,26 @@ margin:10px 0px 30px 00px;
 
 
 
+/* bibtex links */
+button {
+border-radius:1px;
+background: none;
+color: #FAA;
+font-family:"Times New Roman", Times, serif;
+font-size:12pt;
+padding:0;
+text-decoration: none;
+border:none;
+}
+
+button:hover {
+border: none;
+color:#FFAA00;
+cursor: pointer;
+/*background:black;
+box-shadow: 0px 0px 1px #777;*/
+}
+
 /* unvisited link */
 .main a:link{
 color:#FF9095;
@@ -414,3 +434,5 @@ font-style:italic;
 margin:-10px 0px 15px 0px;
 text-align:right;
 }
+
+
