--- a/primary.css
+++ b/primary.css
@@ -97,7 +97,7 @@ float:left;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
 border-width:1px 3px 5px 2px;
-margin:0px 2px 0px 5px;
+margin:0px 2px 3px 5px;
 padding:0px;
 border-color:#131315;
 }
@@ -446,3 +446,56 @@ text-align:right;
 }
 
 
+#taglinks
+{
+margin-left:10px;
+width:100%; 
+height:73px; 
+display:block;
+border-width:0;
+}
+
+#taglinks ul
+{
+float:left;
+width:100%;
+/*    TOP RIGHT BOTTOM LEFT padding */
+margin:2px 5px 3px -13px;
+list-style-type:none;
+border-style:solid;
+/*    TOP RIGHT BOTTOM LEFT padding */
+border-width:0; /*2px 0px 0px 0px;*/
+padding:0px 1px 0 0;
+border-color:#131315;
+}
+#taglinks li 
+{
+display:inline;
+float:left;
+border-style:solid;
+/*    TOP RIGHT BOTTOM LEFT padding */
+border-width:0px 2px 4px 0px;
+margin:0px 2px 3px 5px;
+padding:0px;
+width:auto;
+border-color:#131315;
+background-color:#333335;
+}
+#taglinks li a{
+padding:2px 13px 2px 10px;
+display:block;
+color:#ffffff;
+background-color:#333335;
+text-decoration:none;
+}
+#taglinks li a:hover{
+display:block;
+/*background-color:#333333;*/
+background-color:#BB5500;
+text-decoration:none;
+}
+#taglinks li a:active{
+display:block;
+background-color:#AA0000;
+text-decoration:none;
+}
