--- a/primary.css
+++ b/primary.css
@@ -1,19 +1,29 @@
+html{
+overflow-y:scroll; /* this makes it so getting a scrollbar doesn't jump the page layout */
+}
+
 body{ 
 /* background color of the actual background */
 background-color:#131315; 
 /* text color for most things */
 color:#FDFDFD;      
 /*margins*/
-margin:10px;
+margin:15px;
 font-family:"Times New Roman", Times, serif;
 }
 
+#container {
+	margin: 0px auto;
+	text-align: left;
+	max-width: 1080px;
+}
+
 .main{ 
-width:451px; 
+width:420px; 
 height:auto; 
 float:left;
 background-color:#333131;  
-margin:5px;
+margin:7px;
 padding:3px 20px 0px 20px;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
@@ -39,20 +49,21 @@ position:relative;
 background-color:#353431; 
 color:#EEEEEE;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:3px 5px 3px 5px;
-border-width:1px 2px 10px 7px;
-padding:3px 5px 41px 20px;
+margin:3px 5px 3px 7px;
+border-width:0px 2px 9px 7px;
+/*padding:3px 5px 41px 20px;*/
+padding:3px 5px 5px 20px;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
-box-shadow:1px 1px 0 2px #080808;
+box-shadow:0px 0px 0 0px #080808;
 }      
 .col1{ 
-width:110px; 
+width:100px; 
 float:left;
 background-color:#313331; 
 border-color:#112211; 
-height:400px; 
-margin:5px;
+height:430px; 
+margin:7px;
 padding:3px 20px 0px 20px;
 position: relative;
 overflow-y: auto;
@@ -67,7 +78,7 @@ float:left;
 border-color:#121222;
 background-color:#313133; 
 height:350px; 
-margin:5px;
+margin:7px;
 padding:3px 20px 0px 20px;
 position: relative;
 overflow-y: auto;
@@ -77,44 +88,45 @@ border-width:2px 2px 25px 7px;
 box-shadow:1px 2px 0 3px #080812;
 }    
 
-.header ul
+#biglinks ul
 {
 float:left;
 width:100%;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:2px 5px 3px -7px;
+margin:7px 5px 10px -7px;
 list-style-type:none;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
-border-width:2px 0px 0px 0px;
+border-width:0; 
 padding:4px 1px 0 0;
 border-color:#131315;
 }
-.header li 
+#biglinks li 
 {
 display:inline;
+width:auto;
 float:left;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
-border-width:1px 3px 5px 2px;
+border-width:0px 3px 5px 0px;
 margin:0px 2px 3px 5px;
 padding:0px;
 border-color:#131315;
 }
-.header li a{
-padding:2px 13px 2px 10px;
+#biglinks li a{
+padding:2px 13px 2px 13px;
 display:block;
 color:#ffffff;
-background-color:#333335;
+background-color:#282828;
 text-decoration:none;
 }
-.header li a:hover{
+#biglinks li a:hover{
 display:block;
 /*background-color:#333333;*/
 background-color:#BB5500;
 text-decoration:none;
 }
-.header li a:active{
+#biglinks li a:active{
 display:block;
 background-color:#AA0000;
 text-decoration:none;
@@ -131,12 +143,12 @@ div{
  margin:0px;
  padding:0;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:10px 0px 30px 8px;
+margin:30px 0px 30px 8px;
 }
 
 .main li{
-margin:5px 5px;
-width:381px;
+margin:5px;
+width:361px;
 /*width:100%;*/
 /*float:left;*/
 position: relative;
@@ -209,7 +221,7 @@ border-color:#131315;
 .col1 li 
 {
 display:block;
-width:120px;
+width:110px;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
 border-width:1px 3px 5px 2px;
@@ -313,7 +325,7 @@ padding:7px 5px 0px 5px;
 table{
 font-size:100%;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:0px 10px -5px -7px;
+margin:0px 3px -5px -7px;
 display: block;
 position: relative;
 color:#EEEEEE;
@@ -355,7 +367,7 @@ color:#EEEEEE;
 background-color:#33201E;
 padding:5px 2px 15px 3px;
 border-style:solid;
-border-width:0px 0px 2px 0px;
+border-width:0px 0px 3px 0px;
 border-color:#0A100A;
 }
 
@@ -448,10 +460,12 @@ text-align:right;
 
 #taglinks
 {
-margin-left:10px;
+margin-top:10px;
+margin-left:-5px;
+margin-right:-5px;
+margin-bottom:3px;
 width:100%; 
-height:70px; 
-display:block;
+overflow:hidden; /* this helps the div know how big to make the height */
 border-width:0;
 }
 
@@ -460,12 +474,12 @@ border-width:0;
 float:left;
 width:100%;
 /*    TOP RIGHT BOTTOM LEFT padding */
-margin:2px 3px 3px -13px;
+margin:5px 3px -3px -13px;
 list-style-type:none;
 border-style:solid;
 /*    TOP RIGHT BOTTOM LEFT padding */
 border-width:0; /*2px 0px 0px 0px;*/
-padding:0px 1px 0 0;
+padding:0px 1px 0 10px;
 font-size:11pt;
 border-color:#131315;
 }
